<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="rerave.activities.SettingsActivity"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite">

    <Button
        android:id="@+id/SA_ButtonDownloadKPPFromPortal"
        android:text="@string/download_staffers_list"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/SA_ButtonOpenStaffersList"
        android:text="@string/open_staffers_list"
        android:onClick="onClick"
        android:layout_below="@+id/SA_ButtonDownloadKPPFromPortal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/SA_ButtonUploadInfoToPortal"
        android:text="@string/upload_info_to_portal"
        android:onClick="onClick"
        android:layout_below="@+id/SA_ButtonOpenStaffersList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/SA_EditTextSilenceLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="123"
        android:maxLines="1"
        android:minWidth="30dp"
        android:minLines="1"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:padding="5dp"
        android:background="@drawable/button_shape1"
        android:layout_below="@+id/SA_ButtonUploadInfoToPortal"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/SA_ButtonWriteSilenceLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SA_EditTextSilenceLevel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Записать"
        android:onClick="onClick"/>


</RelativeLayout>